--- a/site/index.html
+++ b/site/index.html
@@ -842,7 +842,7 @@
   <h1>Welcome</h1>
 
 <center>
-<font size= "6">(Your Name) Datasheet</font><br>
+<font size= "6">Ragul Raj RG Datasheet</font><br>
 as part of<br>
 <font size= "8"> Project Name</font><br>
 for<br>
