deploy: 0387fb1afa8c0c51803ddc4f23de298e7bee1ad3

--- a/index.html
+++ b/index.html
@@ -843,9 +843,9 @@
 <font size="6">Terry's
  Datasheet</font><br>
 as part of<br>
-<font size="8"> Project Name</font><br>
+<font size="8"> Project Name EGR 304 </font><br>
 for<br>
-<font size="5"> Team ### </font><br><p></p>
+<font size="5"> Team 102 </font><br><p></p>
 <p><strong>Submission: September, 03, 2025</strong>
 </p></center><p></p>
 <h2 id="introduction">Introduction</h2>
