deploy: 67f65b2cb655c38cd5aa4dc7fd5b505bc7a6a0ff

--- a/01-Block-Diagram/Block-Diagram/index.html
+++ b/01-Block-Diagram/Block-Diagram/index.html
@@ -870,7 +870,7 @@ Fertilizer- Sensor/Actuator
 Moisture Sensor for the soil - Sensor
 </code></pre>
 <h2 id="block-diagram">Block Diagram</h2>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../IndividualTerry.drawio.png" data-desc-position="bottom"><img alt="Example of Indivial Block diagram" src="../IndividualTerry.drawio.png"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../IndividualBlockDiagram.png" data-desc-position="bottom"><img alt="Example of Indivial Block diagram" src="../IndividualBlockDiagram.png"></a></p>
 
 
 
