--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -832,7 +832,7 @@
 SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Floatswitch.png" data-desc-position="bottom"><img alt="" src="../Floatswitch.png"></a></p>
 <ul>
-<li>$1/each</li>
+<li>$7.99/each</li>
 <li><a href="https://www.digikey.com/en/products/detail/littelfuse-inc/59630-1-T-02-A/4771999?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20509825838&amp;gbraid=0AAAAADrbLlhgS6gBiX18_P1FSC4Ya6Ls5&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUm2amo2He_7OUOuz4vKCIkU70yORPZDnrcjj5UW6E_2C8vhyiks2WhoCF10QAvD_BwE">link to product</a></li>
 </ul>
 <table>
@@ -844,7 +844,7 @@ SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 </thead>
 <tbody>
 <tr>
-<td>Inexpensive</td>
+<td>Realitivly Inexpensive</td>
 <td>Requires external components and support circuitry for interface</td>
 </tr>
 <tr>
@@ -852,18 +852,18 @@ SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 <td>Needs special PCB layout.</td>
 </tr>
 <tr>
-<td>Meets surface mount constraint of project</td>
-<td></td>
+<td>Meets constraint of project</td>
+<td>Requires Set up</td>
 </tr>
 </tbody>
 </table>
 </li>
 <li>
 <p>CTX936TR-ND surface mount oscillator</p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image3.png" data-desc-position="bottom"><img alt="" src="../image3.png"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Floatswitch2.png" data-desc-position="bottom"><img alt="" src="../Floatswitch2.png"></a></p>
 <ul>
-<li>$1/each</li>
-<li><a href="http://www.digikey.com/product-detail/en/636L3I001M84320/CTX936TR-ND/2292940">Link to product</a></li>
+<li>$4.17/each</li>
+<li><a href="https://www.digikey.com/en/products/detail/standex-meder-electronics/LS02-1A66-PA-500W/385415?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20232005509&amp;gbraid=0AAAAADrbLliL8TzXuQg7x9tLNvO4PqNgi&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUmjZq440IywNQ2jzZLL1ziGtNA4FLnNz39L1NnW2fEzmiRx9LQ9PThoCPxgQAvD_BwE">Link to product</a></li>
 </ul>
 <table>
 <thead>
@@ -874,11 +874,11 @@ SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 </thead>
 <tbody>
 <tr>
-<td>Outputs a square wave</td>
-<td>More expensive</td>
+<td>Cheaper Item</td>
+<td>Cheaper Quality</td>
 </tr>
 <tr>
-<td>Stable over operating temperature</td>
+<td>Single Switch</td>
 <td>Slow shipping speed</td>
 </tr>
 <tr>
