deploy: 375d12baad1affd18931f5f494492b8a8dcc6633

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -848,8 +848,8 @@ SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 <td>Requires external components and support circuitry for interface</td>
 </tr>
 <tr>
-<td>Compatible with PSoC</td>
-<td>Needs special PCB layout.</td>
+<td>Normally Open Switch</td>
+<td>No option for closed switch</td>
 </tr>
 <tr>
 <td>Meets constraint of project</td>
@@ -857,9 +857,11 @@ SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 </tr>
 </tbody>
 </table>
+<p><strong>Choice:</strong> Option 1</p>
+<p><strong>Rationale:</strong> Most affordable option, while keeping necessary functions for project purposes. Easy to set up with PCB board. Normally open switch witch better fits project needs.</p>
 </li>
 <li>
-<p>CTX936TR-ND surface mount oscillator</p>
+<p>LS02-1A66-PA-500W Float Switch</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Floatswitch2.png" data-desc-position="bottom"><img alt="" src="../Floatswitch2.png"></a></p>
 <ul>
 <li>$4.17/each</li>
@@ -888,9 +890,37 @@ SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 </tbody>
 </table>
 </li>
+<li>
+<p>SPST Liquid Level Switch Selectable 240 VAC 100 PSI</p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Floatswitch3.png" data-desc-position="bottom"><img alt="" src="../Floatswitch3.png"></a></p>
+<ul>
+<li>$13.49/each</li>
+<li><a href="https://www.zoro.com/madison-spst-liquid-level-switch-selectable-240-vac-100-psi-m8000/i/G2923024/?utm_source=google&amp;utm_medium=surfaces&amp;utm_campaign=shopping%20feed&amp;utm_content=free%20google%20shopping%20clicks&amp;campaignid=21413729702&amp;productid=G2923024&amp;v=&amp;gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=21407283336&amp;gbraid=0AAAAADw3hZfk1_4-rLG86Cs8Xprx4fCAb&amp;gclid=CjwKCAjw0sfHBhB6EiwAQtv5qelPiJLWtLxb2EKBoslzb5jkatH57YSqIPhER1bej1qQrGuu4tblihoCkIAQAvD_BwE">Link to product</a></li>
+</ul>
+<table>
+<thead>
+<tr>
+<th>Pros</th>
+<th>Cons</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Most Expensive Item</td>
+<td>Unnessarcy for project purposes</td>
+</tr>
+<tr>
+<td>Higher Quality</td>
+<td>Primarily for sump pump</td>
+</tr>
+<tr>
+<td>Selectable swith function</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</li>
 </ol>
-<p><strong>Choice:</strong> Option 2: CTX936TR-ND surface mount oscillator</p>
-<p><strong>Rationale:</strong> A clock oscillator is easier to work with because it requires no external circuitry in order to interface with the PSoC. This is particularly important because we are not sure of the electrical characteristics of the PCB, which could affect the oscillation of a crystal. While the shipping speed is slow, according to the website if we order this week it will arrive within 3 weeks.</p>
 
 
 
