--- a/01-Block-Diagram/Block-Diagram/index.html
+++ b/01-Block-Diagram/Block-Diagram/index.html
@@ -863,14 +863,10 @@
 <h2 id="team-information">Team Information</h2>
 <h2 id="overview">Overview</h2>
 <p>Internal Reservoir system - Sensor/Actuator</p>
-<p>Float Style tank level to determine internal reservoir water level, actuates intake pump for external water tank to fill internal reservoir. Actuates stirring for fertilizer prompted by the fertilizer system. </p>
+<p>My Segment of the project will be on on the internal resovoir system which will control water intake. A Float switch will be used to determine internal reservoir water level, when the tank in low the switch will actuate the intake pump for external water tank to fill internal reservoir. This will send a downstream signal to the fertilizer stirring system, prompting it to start. </p>
 <p>Team connections:</p>
-<pre><code>Water Distribution Pump - Actuation 
-Fertilizer- Sensor/Actuator
-Moisture Sensor for the soil - Sensor
-</code></pre>
 <h2 id="block-diagram">Block Diagram</h2>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../IndividualBlockDiagram.png" data-desc-position="bottom"><img alt="Example of Indivial Block diagram" src="../IndividualBlockDiagram.png"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../IndividualBlockDiagramEdited.drawio.png" data-desc-position="bottom"><img alt="Example of Indivial Block diagram" src="../IndividualBlockDiagramEdited.drawio.png"></a></p>
 
 
 
