--- a/index.html
+++ b/index.html
@@ -843,27 +843,34 @@
 <font size="6">Terry's
  Datasheet</font><br>
 as part of<br>
-<font size="8"> Project Name EGR 304 </font><br>
+<font size="8"> Self Regulating Irrigation System = </font><br>
 for<br>
 <font size="5"> Team 102 </font><br><p></p>
-<p><strong>Submission: September, 03, 2025</strong>
+<p><strong>Submission: October, 26, 2025</strong>
 </p></center><p></p>
 <h2 id="introduction">Introduction</h2>
 <ul>
-<li>This needs to be updated so that a reader gets an idea of the purpose of this datasheet.</li>
+<li>This Individual datasheet is for the  Internal Resovoir subsection of team 102's irrigation project. The pages of this datasheet will show the design process, project criteria, and overall documentation.</li>
 </ul>
 <h3 id="project-summary">Project Summary</h3>
 <ul>
-<li>This needs to be updated to reflect <ins>your version</ins> of the team project, so when shared not via the team's report, the reader gets an idea of the direction of the project and how your work will contribute to the overall success.</li>
-<li>Add context that ties into the link to your <a href="https://embedded-systems-design.github.io/EGR304TeamTemplate/">team report.</a></li>
+<li>The goal of the project is to create a system communication between individual subsystems to provide a function that makes the life of a homeowner easier. The task Team 102 decided upon was to create a self regulating system to water plants. Our team split this up into 4 subsystems: internal Tank intake, fertilizer distribution, water distribution, and moisture sensing. This indvidual sheet will be focused on the Internal Tank Intake System. The other functions of the project will be included in the overall <a href="https://embedded-systems-design.github.io/EGR304TeamTemplate/">team report</a>. One thing to remember about this project was created for teams in a school based environment to learn simple electronics and practice embedded software development.</li>
 </ul>
 <h3 id="my-contribution">My Contribution</h3>
 <ul>
-<li>This needs to be updated to reflect a team introduction</li>
-<li>Content should also help an unfamiliar reader navigate to areas of interest. Information like:</li>
+<li>
+<p>To review the overarching diagram relating to the subsection, please visit the <a href="https://tlwill38-bit.github.io/01-Block-Diagram/Block-Diagram/">"Block Diagram"</a>. section of the database.</p>
+</li>
+<li>
+<p>To review the details regarding the components used to construct the subsection, you can review it in the <a href="https://tlwill38-bit.github.io02-Component-Selection/Component-Selection/">"Component Selection"</a>. section of the database.</p>
+</li>
+<li>
+<p>To review the details regarding power consumption, please visit the <a href="https://tlwill38-bit.github.io/05-Power-Budget/Power-Budget/">"Power Budget"</a>. section of the database.</p>
+</li>
+<li>
+<p>To review the details regarding the schematic, please visit the <a href="https://tlwill38-bit.github.io/04-Schematic/schematic/">"schematic"</a>. section of the database.</p>
+</li>
 </ul>
-<p>the <a href="https://embedded-systems-design.github.io/EGR304DataSheetTemplate/03-BOM/BOM/">"BOM"</a> section of the datasheet.</p>
-<p>For all the sections</p>
 
 
 
