deploy: 70daea8adcea67c4ea2982ccc16f586bef2b9f99

--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
 <font size="6">Terry's
  Datasheet</font><br>
 as part of<br>
-<font size="8"> Self Regulating Irrigation System = </font><br>
+<font size="8"> Self Regulating Irrigation System  </font><br>
 for<br>
 <font size="5"> Team 102 </font><br><p></p>
 <p><strong>Submission: October, 26, 2025</strong>
@@ -854,7 +854,7 @@ for<br>
 </ul>
 <h3 id="project-summary">Project Summary</h3>
 <ul>
-<li>The goal of the project is to create a system communication between individual subsystems to provide a function that makes the life of a homeowner easier. The task Team 102 decided upon was to create a self regulating system to water plants. Our team split this up into 4 subsystems: internal Tank intake, fertilizer distribution, water distribution, and moisture sensing. This indvidual sheet will be focused on the Internal Tank Intake System. The other functions of the project will be included in the overall <a href="https://embedded-systems-design.github.io/EGR304TeamTemplate/">team report</a>. One thing to remember about this project was created for teams in a school based environment to learn simple electronics and practice embedded software development.</li>
+<li>The goal of the project is to create a system communication between individual subsystems to provide a function that makes the life of a homeowner easier. The task Team 102 decided upon was to create a self regulating system to water plants. Our team split this up into 4 subsystems: internal Tank intake, fertilizer distribution, water distribution, and moisture sensing. This indvidual sheet will be focused on the Internal Tank Intake System. The other functions of the project will be included in the overall <a href="https://egr304-2025-f-102.github.io/">team report</a>. One thing to remember about this project was created for teams in a school based environment to learn simple electronics and practice embedded software development.</li>
 </ul>
 <h3 id="my-contribution">My Contribution</h3>
 <ul>
