deploy: 7730a1cce428d18d59808d29a6bb7729be0be2ec

--- a/05-Power-Budget/Power-Budget/index.html
+++ b/05-Power-Budget/Power-Budget/index.html
@@ -853,17 +853,13 @@
   <h1>Power Budget</h1>
 
 <h2 id="overview">Overview</h2>
-<p>Write a overview of what you did and why you did a Power Budget.</p>
-<blockquote>
-<p>Capture your power budge as a image to display. Take time to get clean breaks and a well organized layout.</p>
-</blockquote>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../budgetPg1.png" data-desc-position="bottom"><img alt="budget1" height:_300_="height:&quot;300;&quot;" src="../budgetPg1.png" style="style" width:_350_="width:&quot;350&quot;"></a></p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../budgetPg2.png" data-desc-position="bottom"><img alt="budget2" height:_300_="height:&quot;300;&quot;" src="../budgetPg2.png" style="style" width:_350_="width:&quot;350&quot;"></a></p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../budgetPg3.png" data-desc-position="bottom"><img alt="budget3" height:_300_="height:&quot;300;&quot;" src="../budgetPg3.png" style="style" width:_350_="width:&quot;350&quot;"></a></p>
+<p>After selecting components in Component Selection we needed to ensure that the subsection would have the power it needs with the added requirement of a safety margin. Therefore, we took the active components, meaning we excluded switches and passive components, and ensured our power supply as well as our regulators were able to get the power needed. The specifications for each piece came from their datasheet except in the case of the motor where it will only get power through the motor driver so it has different tolerances.</p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../PowerBudgetUpdated.png" data-desc-position="bottom"><img alt="budget1" src="../PowerBudgetUpdated.png"></a>
+<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Powerbudget1.png" data-desc-position="bottom"><img alt="budget2" src="../Powerbudget1.png"></a></p>
 <h2 id="conclusions">Conclusions</h2>
-<p>From the prepare Power Budget, .....</p>
+<p>From the prepare Power Budget, I noticed that with the saftey margin applied my current is not enough, however my components do not need to run all at the same time, so the design works out. </p>
 <h2 id="resouces">Resouces</h2>
-<p>The power budget as a PDF download is available <a href="../PowerBudgetExample.pdf"><em>here</em></a>, and a Microsoft Excel Sheet <a href="../PowerBudgetExample.xlsx"><em>here</em></a>.</p>
+<p>The power budget as a PDF download is available <a href=""><em>here</em></a>, and a Microsoft Excel Sheet <a href="PowerBudgetExample.xlsx"><em>here</em></a>.</p>
 
 
 
