deploy: e505d0936e532284759e47cc982fd9317d7cefea

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -1278,17 +1278,17 @@ SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 </li>
 </ol>
 <p><strong>Choice:</strong> Option 1</p>
-<p><strong>Rationale:</strong> Most affordable option, while keeping necessary functions for project purposes. Easy to set up with PCB board. Normally open switch witch better fits project needs.</p>
+<p><strong>Rationale:</strong> Capable of running off of 5 volts, which is perfect for the scope of the project, intakes water at a good rate.</p>
 <h3 id="volatge-regulator">Volatge Regulator</h3>
 <h2 id="_4"></h2>
 <ol>
 <li>
-<p>59630-1-T-02-A <br>
+<p>L7805CV<br>
 SENSOR LEVEL SWITCH SINGLE FLOAT</p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Floatswitch.png" data-desc-position="bottom"><img alt="" src="../Floatswitch.png"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../VoltageRegulator.png" data-desc-position="bottom"><img alt="" src="../VoltageRegulator.png"></a></p>
 <ul>
-<li>$7.99/each</li>
-<li><a href="https://www.digikey.com/en/products/detail/littelfuse-inc/59630-1-T-02-A/4771999?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20509825838&amp;gbraid=0AAAAADrbLlhgS6gBiX18_P1FSC4Ya6Ls5&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUm2amo2He_7OUOuz4vKCIkU70yORPZDnrcjj5UW6E_2C8vhyiks2WhoCF10QAvD_BwE">link to product</a></li>
+<li>0.50/each</li>
+<li><a href="https://www.digikey.com/en/products/detail/stmicroelectronics/L7805CV/585964?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlidVOsd5u8Z8e0XY83cd9tRl&amp;gclid=Cj0KCQjwsPzHBhDCARIsALlWNG2V09HetNL3l8QpYvWw4KMgAhdhMJerjx_B7vWUj3ZPqoJH5pSxQIgaAjY8EALw_wcB">link to product</a></li>
 </ul>
 <table>
 <thead>
@@ -1314,11 +1314,11 @@ SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 </table>
 </li>
 <li>
-<p>LS02-1A66-PA-500W Float Switch</p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Floatswitch2.png" data-desc-position="bottom"><img alt="" src="../Floatswitch2.png"></a></p>
+<p>LM7805CT/NOPB Float Switch</p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../VoltageRegulator1.png" data-desc-position="bottom"><img alt="" src="../VoltageRegulator1.png"></a></p>
 <ul>
-<li>$4.17/each</li>
-<li><a href="https://www.digikey.com/en/products/detail/standex-meder-electronics/LS02-1A66-PA-500W/385415?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20232005509&amp;gbraid=0AAAAADrbLliL8TzXuQg7x9tLNvO4PqNgi&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUmjZq440IywNQ2jzZLL1ziGtNA4FLnNz39L1NnW2fEzmiRx9LQ9PThoCPxgQAvD_BwE">Link to product</a></li>
+<li>$1.80/each</li>
+<li><a href="https://www.digikey.com/en/products/detail/texas-instruments/LM7805CT-NOPB/3901929?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlidVOsd5u8Z8e0XY83cd9tRl&amp;gclid=Cj0KCQjwsPzHBhDCARIsALlWNG2rUEtYLqRIWR4gKatfL7OWrXjdHvzFVYpVgIk_ye9696JUMLn7n80aAiXCEALw_wcB">Link to product</a></li>
 </ul>
 <table>
 <thead>
@@ -1344,11 +1344,11 @@ SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 </table>
 </li>
 <li>
-<p>SPST Liquid Level Switch Selectable 240 VAC 100 PSI</p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Floatswitch3.png" data-desc-position="bottom"><img alt="" src="../Floatswitch3.png"></a></p>
+<p>LM334Z/NOPB Voltage regulator</p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../VoltageRegulator2.png" data-desc-position="bottom"><img alt="" src="../VoltageRegulator2.png"></a></p>
 <ul>
-<li>$13.49/each</li>
-<li><a href="https://www.zoro.com/madison-spst-liquid-level-switch-selectable-240-vac-100-psi-m8000/i/G2923024/?utm_source=google&amp;utm_medium=surfaces&amp;utm_campaign=shopping%20feed&amp;utm_content=free%20google%20shopping%20clicks&amp;campaignid=21413729702&amp;productid=G2923024&amp;v=&amp;gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=21407283336&amp;gbraid=0AAAAADw3hZfk1_4-rLG86Cs8Xprx4fCAb&amp;gclid=CjwKCAjw0sfHBhB6EiwAQtv5qelPiJLWtLxb2EKBoslzb5jkatH57YSqIPhER1bej1qQrGuu4tblihoCkIAQAvD_BwE">Link to product</a></li>
+<li>$0.89/each</li>
+<li><a href="https://www.digikey.com/en/products/detail/texas-instruments/LM334Z-NOPB/6215?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlidVOsd5u8Z8e0XY83cd9tRl&amp;gclid=Cj0KCQjwsPzHBhDCARIsALlWNG2sMB1KTZsUU08U2QJZiS7wg3JbH3BC5kjuac5uN8e2_8JWX2TNxBEaAnWREALw_wcB">Link to product</a></li>
 </ul>
 <table>
 <thead>
@@ -1374,8 +1374,8 @@ SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 </table>
 </li>
 </ol>
-<p><strong>Choice:</strong> Option 1</p>
-<p><strong>Rationale:</strong> Most affordable option, while keeping necessary functions for project purposes. Easy to set up with PCB board. Normally open switch witch better fits project needs.</p>
+<p><strong>Choice:</strong> Option 2</p>
+<p><strong>Rationale:</strong> Pricing is negligible for these components, however the LM7805 is included in group kits, it has the ratings for the needs of this project, and it can be easily replaced.</p>
 
 
 
