deploy: d16a7cda1951934c4ea424850d2c81d6e207b314

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -1202,12 +1202,12 @@ SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 </thead>
 <tbody>
 <tr>
-<td>Realitivly Inexpensive</td>
+<td>3 - 6v safe operating voltage</td>
 <td>Requires external components and support circuitry for interface</td>
 </tr>
 <tr>
-<td>Normally Open Switch</td>
-<td>No option for closed switch</td>
+<td>One connecter wire</td>
+<td>have to cut wire</td>
 </tr>
 <tr>
 <td>Meets constraint of project</td>
@@ -1232,16 +1232,16 @@ SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 </thead>
 <tbody>
 <tr>
-<td>Cheaper Item</td>
+<td>3 Volts DC</td>
 <td>Cheaper Quality</td>
 </tr>
 <tr>
-<td>Single Switch</td>
-<td>Slow shipping speed</td>
+<td>2 wire</td>
+<td>Low current</td>
 </tr>
 <tr>
-<td>Direct interface with PSoC (no external circuitry required) range</td>
 <td></td>
+<td>Not much information on product</td>
 </tr>
 </tbody>
 </table>
@@ -1262,16 +1262,16 @@ SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 </thead>
 <tbody>
 <tr>
-<td>Most Expensive Item</td>
+<td>Capable of reaching 30 GPH target</td>
 <td>Unnessarcy for project purposes</td>
 </tr>
 <tr>
-<td>Higher Quality</td>
-<td>Primarily for sump pump</td>
+<td>Works at 9V from supply</td>
+<td>Requires Connector</td>
 </tr>
 <tr>
-<td>Selectable swith function</td>
-<td></td>
+<td>Cheap</td>
+<td>No filtering</td>
 </tr>
 </tbody>
 </table>
@@ -1303,7 +1303,7 @@ SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 <td>Requires external components and support circuitry for interface</td>
 </tr>
 <tr>
-<td>Normally Open Switch</td>
+<td>Max input 35v</td>
 <td>No option for closed switch</td>
 </tr>
 <tr>
@@ -1329,15 +1329,15 @@ SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 </thead>
 <tbody>
 <tr>
-<td>Cheaper Item</td>
-<td>Cheaper Quality</td>
+<td>Included in Kit</td>
+<td>Could be slightly oversized</td>
 </tr>
 <tr>
 <td>Single Switch</td>
 <td>Slow shipping speed</td>
 </tr>
 <tr>
-<td>Direct interface with PSoC (no external circuitry required) range</td>
+<td>35 V input max</td>
 <td></td>
 </tr>
 </tbody>
@@ -1359,15 +1359,15 @@ SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 </thead>
 <tbody>
 <tr>
-<td>Most Expensive Item</td>
+<td>Inexpensive Item</td>
 <td>Unnessarcy for project purposes</td>
 </tr>
 <tr>
 <td>Higher Quality</td>
-<td>Primarily for sump pump</td>
+<td>Wrong type of Regulator</td>
 </tr>
 <tr>
-<td>Selectable swith function</td>
+<td>Max input current of 40V</td>
 <td></td>
 </tr>
 </tbody>
