deploy: f3e8dc801f0e68127c9de092b31eadf2d4fcd217

--- a/04-Schematic/schematic/index.html
+++ b/04-Schematic/schematic/index.html
@@ -836,7 +836,7 @@
 
 <h2 id="float-switch-schematic">Float Switch Schematic</h2>
 <p>This is a shematic of our projects water intake pump it uses a float switch to determine when the circuit will close actuating the water intake pump when the tank is full the Microcontroller will send a downstream signal to the water distributor. </p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../UpdatedIndividualSubsytem.png" data-desc-position="bottom"><img alt="schematic" src="../UpdatedIndividualSubsytem.png"></a>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../CircuitMain.png" data-desc-position="bottom"><img alt="schematic" src="../CircuitMain.png"></a>
 <strong>Figure 1:</strong> IndivdualSubsystem Full schematic.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Microcontroller.png" data-desc-position="bottom"><img alt="schematic" src="../Microcontroller.png"></a>
 <strong>Figure 2:</strong> IndivdualSubsystem Microcontroller.</p>
@@ -844,10 +844,14 @@
 <strong>Figure 3:</strong> IndivdualSubsystem Floatswitch.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../PowerBlock.png" data-desc-position="bottom"><img alt="schematic" src="../PowerBlock.png"></a>
 <strong>Figure 4:</strong> IndivdualSubsystem Powerblock.</p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Intake_Relay.png" data-desc-position="bottom"><img alt="schematic" src="../Intake_Relay.png"></a>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Intake.png" data-desc-position="bottom"><img alt="schematic" src="../Intake.png"></a>
 <strong>Figure 5:</strong> IndivdualSubsystem Intake Pump.</p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Userinterface.png" data-desc-position="bottom"><img alt="schematic" src="../Userinterface.png"></a>
+<strong>Figure 6:</strong> IndivdualSubsystem Rotary Encoder.</p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../LCD.png" data-desc-position="bottom"><img alt="schematic" src="../LCD.png"></a>
+<strong>Figure 7:</strong> IndivdualSubsystem LCD Diplay.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../RibbonConnector.png" data-desc-position="bottom"><img alt="schematic" src="../RibbonConnector.png"></a>
-<strong>Figure 6:</strong> IndivdualSubsystem Ribbon Connector.</p>
+<strong>Figure 8:</strong> IndivdualSubsystem Ribbon Connector.</p>
 <h2 id="resources">Resources</h2>
 <p>The schematic is available as a pdf file, and the project is available as a zip folder.</p>
 
