--- a/04-Schematic/schematic/index.html
+++ b/04-Schematic/schematic/index.html
@@ -835,23 +835,25 @@
   <h1>Schematic</h1>
 
 <h2 id="float-switch-schematic">Float Switch Schematic</h2>
-<p>This is a shematic of our projects water intake pump it uses a float switch to determine when the circuit will close actuating the water intake pump when the tank is full the Microcontroller will send a downstream signal to the water distributor. </p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../CircuitMain.png" data-desc-position="bottom"><img alt="schematic" src="../CircuitMain.png"></a>
+<p>This is a shematic of our projects water intake pump it uses a Ir Sensor/Emitter to determine when the circuit will close actuating the water intake pump when the tank is full(a schematic for a float switch is included however it is not used) the Microcontroller will send a downstream signal to the water distributor. </p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../MainScematic.png" data-desc-position="bottom"><img alt="schematic" src="../MainScematic.png"></a>
 <strong>Figure 1:</strong> IndivdualSubsystem Full schematic.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Microcontroller.png" data-desc-position="bottom"><img alt="schematic" src="../Microcontroller.png"></a>
 <strong>Figure 2:</strong> IndivdualSubsystem Microcontroller.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../FloatSwitchSchematic.png" data-desc-position="bottom"><img alt="schematic" src="../FloatSwitchSchematic.png"></a>
 <strong>Figure 3:</strong> IndivdualSubsystem Floatswitch.</p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../PowerBlock.png" data-desc-position="bottom"><img alt="schematic" src="../PowerBlock.png"></a>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../PowerBudgetUpdated.png" data-desc-position="bottom"><img alt="schematic" src="../PowerBudgetUpdated.png"></a>
 <strong>Figure 4:</strong> IndivdualSubsystem Powerblock.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Intake.png" data-desc-position="bottom"><img alt="schematic" src="../Intake.png"></a>
 <strong>Figure 5:</strong> IndivdualSubsystem Intake Pump.</p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Userinterface.png" data-desc-position="bottom"><img alt="schematic" src="../Userinterface.png"></a>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../UI.png" data-desc-position="bottom"><img alt="schematic" src="../UI.png"></a>
 <strong>Figure 6:</strong> IndivdualSubsystem Rotary Encoder.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../LCD.png" data-desc-position="bottom"><img alt="schematic" src="../LCD.png"></a>
 <strong>Figure 7:</strong> IndivdualSubsystem LCD Diplay.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../RibbonConnector.png" data-desc-position="bottom"><img alt="schematic" src="../RibbonConnector.png"></a>
 <strong>Figure 8:</strong> IndivdualSubsystem Ribbon Connector.</p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../IR.png" data-desc-position="bottom"><img alt="schematic" src="../IR.png"></a>
+<strong>Figure 9:</strong> IndivdualSubsystem Ir Sensor/emitter.</p>
 <h2 id="resources">Resources</h2>
 <p>The schematic is available as a pdf file, and the project is available as a zip folder.</p>
 
