deploy: fbeb4765aa38036890af79e98311cf7e7b83c0d8

--- a/06-PCB/PCB/index.html
+++ b/06-PCB/PCB/index.html
@@ -907,7 +907,7 @@
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../BackCopper.png" data-desc-position="bottom"><img alt="PCB" src="../BackCopper.png"></a>
 <strong>Figure 2:</strong> Back Copper.</p>
 <h2 id="resources">Resources</h2>
-<p>The schematic is available as a pdf file, and the project is available as a zip folder.</p>
+<p>The PCB is available as a PDF <a href="../PCBforGIT.pdf">here</a>, and the GERBER files available as a zip folder <a href="../GERBER.zip">here</a>.</p>
 
 
 
