--- a/04-Schematic/schematic/index.html
+++ b/04-Schematic/schematic/index.html
@@ -902,7 +902,7 @@
 
 <h2 id="float-switch-schematic">Float Switch Schematic</h2>
 <p>This is a shematic of our projects water intake pump it uses a Ir Sensor/Emitter to determine when the circuit will close actuating the water intake pump when the tank is full(a schematic for a float switch is included however it is not used) the Microcontroller will send a downstream signal to the water distributor. </p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../MainScematic.png" data-desc-position="bottom"><img alt="schematic" src="../MainScematic.png"></a>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../MainUpdatedSCH.png" data-desc-position="bottom"><img alt="schematic" src="../MainUpdatedSCH.png"></a>
 <strong>Figure 1:</strong> IndivdualSubsystem Full schematic.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Microcontroller.png" data-desc-position="bottom"><img alt="schematic" src="../Microcontroller.png"></a>
 <strong>Figure 2:</strong> IndivdualSubsystem Microcontroller.</p>
@@ -914,14 +914,12 @@
 <strong>Figure 5:</strong> IndivdualSubsystem Intake Pump.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../UI.png" data-desc-position="bottom"><img alt="schematic" src="../UI.png"></a>
 <strong>Figure 6:</strong> IndivdualSubsystem Rotary Encoder.</p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../LCD.png" data-desc-position="bottom"><img alt="schematic" src="../LCD.png"></a>
-<strong>Figure 7:</strong> IndivdualSubsystem LCD Diplay.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../RibbonConnector.png" data-desc-position="bottom"><img alt="schematic" src="../RibbonConnector.png"></a>
 <strong>Figure 8:</strong> IndivdualSubsystem Ribbon Connector.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../IR.png" data-desc-position="bottom"><img alt="schematic" src="../IR.png"></a>
 <strong>Figure 9:</strong> IndivdualSubsystem Ir Sensor/emitter.</p>
 <h2 id="resources">Resources</h2>
-<p>The schematic is available as a pdf file, and the project is available as a zip folder.</p>
+<p>The PCB is available as a PDF <a href="IndividualSubsystem(3).pdf">here</a>, and the GERBER files available as a zip folder <a href="IndividualSubsystem(2).zip">here</a>.</p>
 
 
 
