deploy: 4ea7a537a94812b4f58b6e34216bb4edde24a21f

--- a/04-Schematic/schematic/index.html
+++ b/04-Schematic/schematic/index.html
@@ -901,7 +901,7 @@
   <h1>Schematic</h1>
 
 <h2 id="float-switch-schematic">Float Switch Schematic</h2>
-<p>This is a shematic of our projects water intake pump it uses a Ir Sensor/Emitter to determine when the circuit will close actuating the water intake pump when the tank is full(a schematic for a float switch is included however it is not used) the Microcontroller will send a downstream signal to the water distributor. </p>
+<p>This is a shematic of our projects water intake pump it uses a Ir Sensor/Emitter to determine when the circuit will close actuating the water intake pump when the tank is full(a schematic for a float switch is included however it is not used) the Microcontroller will send a downstream signal to the water distributor. The LCD was removed due to footprint issues</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../MainUpdatedSCH.png" data-desc-position="bottom"><img alt="schematic" src="../MainUpdatedSCH.png"></a>
 <strong>Figure 1:</strong> IndivdualSubsystem Full schematic.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Microcontroller.png" data-desc-position="bottom"><img alt="schematic" src="../Microcontroller.png"></a>
