--- a/01-Block-Diagram/Block-Diagram/index.html
+++ b/01-Block-Diagram/Block-Diagram/index.html
@@ -921,7 +921,7 @@
 <h2 id="team-information">Team Information</h2>
 <h2 id="overview">Overview</h2>
 <p>Internal Reservoir system - Sensor/Actuator</p>
-<p>My Segment of the project will be on on the internal resovoir system which will control water intake. A Float switch will be used to determine internal reservoir water level, when the tank in low the switch will actuate the intake pump for external water tank to fill internal reservoir. This will send a downstream signal to the fertilizer stirring system, prompting it to start. </p>
+<p>My Segment of the project will be on on the internal resovoir system which will control water intake. A Float switch will be used to determine internal reservoir water level, when the tank in low the switch will actuate the intake pump for external water tank to fill internal reservoir. This will send a downstream signal to the fertilizer stirring system, prompting it to start and run. </p>
 <p>Team connections:</p>
 <h2 id="block-diagram">Block Diagram</h2>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../TerryBlock.drawio.png" data-desc-position="bottom"><img alt="Example of Indivial Block diagram" src="../TerryBlock.drawio.png"></a></p>
