--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -1097,10 +1097,10 @@
 <ol>
 <li>
 <p>59630-1-T-02-A <br>
-SENSOR LEVEL SWITCH SINGLE FLOAT</p>
+SENSOR SWITCH SINGLE FLOAT</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Floatswitch.png" data-desc-position="bottom"><img alt="" src="../Floatswitch.png"></a></p>
 <ul>
-<li>$7.99/each</li>
+<li>$6.99/each</li>
 <li><a href="https://www.digikey.com/en/products/detail/littelfuse-inc/59630-1-T-02-A/4771999?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20509825838&amp;gbraid=0AAAAADrbLlhgS6gBiX18_P1FSC4Ya6Ls5&amp;gclid=CjwKCAjwr8LHBhBKEiwAy47uUm2amo2He_7OUOuz4vKCIkU70yORPZDnrcjj5UW6E_2C8vhyiks2WhoCF10QAvD_BwE">link to product</a></li>
 </ul>
 <table>
@@ -1157,7 +1157,7 @@ SENSOR LEVEL SWITCH SINGLE FLOAT</p>
 </table>
 </li>
 <li>
-<p>SPST Liquid Level Switch Selectable 240 VAC 100 PSI</p>
+<p>SPST Liquid Level Switch  240 VAC 100 PSI</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../Floatswitch3.png" data-desc-position="bottom"><img alt="" src="../Floatswitch3.png"></a></p>
 <ul>
 <li>$13.49/each</li>
@@ -1584,7 +1584,7 @@ N-CHANNEL MOSFET 60V 16A TO220F (AOTF2618L)</p>
 </li>
 </ol>
 <p><strong>Choice:</strong> Option 1</p>
-<p><strong>Rationale:</strong> Pricing is negligible for these components, however the AOTF2618L is included in group kits, it has the ratings for the needs of this project, and it can be easily replaced if damaged or less.</p>
+<p><strong>Rationale:</strong> Price is negligible for these components, however the AOTF2618L is included in group kits, it has the ratings for the needs of this project, and it can be easily replaced if damaged or less.</p>
 <h3 id="rotary-encoder">Rotary Encoder</h3>
 <ol>
 <li>
